@@ -1,0 +1,48 @@
+#
+# $Id$
+# $Source$
+#
+# Master configured for 9600 baud, 
+# If 9600 - wait 0.5 sec before sending next command
+# If 2400 - wait 1.5 sec before sending next command
+# FIXME: assumes only one plug at address 0.  There can be up to ten.
+begin protocol specification
+	specification name "wti-rps10"
+	specification type "serial"
+	off string "Off"
+	on string  "On"
+	all string "*"
+	plug count 1
+	device timeout 12  # toggle can be configured for 10 sec
+	begin LOGIN_SCRIPT
+	end LOGIN_SCRIPT
+	begin LOGOUT_SCRIPT
+	end LOGOUT_SCRIPT
+	begin STATUS_SCRIPT
+		send "\032\032\002\032\032\002\032\032%*?\r"
+		expect "Plug 0 ([On|Off])"
+			map $1 "0"
+		expect "Complete"
+		delay 0.5
+	end STATUS_SCRIPT
+	begin ON_SCRIPT
+		send "\032\032\002\032\032\002\032\032%s1\r"
+		expect "Plug [0-9] On"
+		expect "Complete"
+		delay 0.5
+	end ON_SCRIPT
+	begin OFF_SCRIPT
+		send "\032\032\002\032\032\002\032\032%s0\r"
+		expect "Plug [0-9] Off"
+		expect "Complete"
+		delay 0.5
+	end OFF_SCRIPT
+	begin CYCLE_SCRIPT
+		send "\032\032\002\032\032\002\032\032%sT\r"
+		expect "Plug [0-9] Off"
+		expect "Plug [0-9] On"
+		expect "Complete"
+		delay 0.5
+	end CYCLE_SCRIPT
+	plug name "0"
+end protocol specification
